Feat: 불필요한 import제거, Dto모두 record로 변경, Policy id Integer로 변경